fix: use thumb_needs_crop property in comics.js for cropped images

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -31,22 +31,21 @@
         }
 
         .cover {
-          overflow: hidden; /* needed for fix, see below ↓ */
+          overflow: hidden; /* needed for cropped images, see below ↓ */
 
           img {
             width: 100%;
             aspect-ratio: 1 / 1;
             object-fit: cover;
             object-position: top center;
+
+            /* NOTE: Temporary fix for non-uniform thumb images with white margins */
+            &.cropped {
+              transform: scale(1.56);
+              transform-origin: top center;
+            }
           }
         }
-      }
-
-      /* NOTE: Temporary fix for non-uniform thumb images with white margins */
-      li:first-child img,
-      li:last-child img {
-        transform: scale(1.56);
-        transform-origin: top center;
       }
     }
   }
